一些修改